exports[`Dropdown snapshot testing Spain selected 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="Spain" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className="selected"
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing allowBlank=false 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="England" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing disabled 1`] = `
<div
  className="dropdown disabled"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={true}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing none selected 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing required=true 1`] = `
<div
  className="dropdown required"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={true}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing with className 1`] = `
<div
  className="dropdown something fancy"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing with error message 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    error="some error message"
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing with label 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    label="Select country"
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing with minimum properties 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="England"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="Spain"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="Thailand"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="USA"
      value="EN-en" />
  </ul>
</div>
`;

exports[`Dropdown snapshot testing with template 1`] = `
<div
  className="dropdown"
  data-react-toolbox="dropdown"
  onBlur={[Function]}
  onFocus={[Function]}>
  <Input
    className="value"
    disabled={false}
    floating={true}
    hint=""
    multiline={false}
    onClick={[Function]}
    readOnly={true}
    required={false}
    tabIndex="0"
    theme={Object {}}
    themeNamespace="input"
    type={null}
    value="" />
  <ul
    className="values">
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="{\"value\":\"EN-gb\",\"label\":\"England\"}"
      value="EN-gb" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="{\"value\":\"ES-es\",\"label\":\"Spain\"}"
      value="ES-es" />
    <DropdownItem
      className="disabled"
      disabled={true}
      handleSelect={[Function]}
      label="{\"value\":\"TH-th\",\"label\":\"Thailand\",\"disabled\":true}"
      value="TH-th" />
    <DropdownItem
      className=""
      handleSelect={[Function]}
      label="{\"value\":\"EN-en\",\"label\":\"USA\"}"
      value="EN-en" />
  </ul>
</div>
`;
